--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun index.ts",
-    "dev": "bun --watch index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "start": "bun run src/index.ts",
+    "introspect": "drizzle-kit introspect:pg --config=drizzle.config.ts",
+    "generate": "drizzle-kit generate:pg --config=drizzle.config.ts",
+    "migrate": "bun run src/db/migrate.ts",
+    "studio": "drizzle-kit studio"
   },
   "devDependencies": {
     "@types/bun": "latest"
