--- a/.gitignore
+++ b/.gitignore
@@ -101,7 +101,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-
+docker-compose.yml
 .env
 .env.development.local
 .env.test.local
