--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
   "name": "backend",
-  "module": "index.ts",
+  "version": "1.0",
+  "description": "",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "bun run --watch src/index.ts",
-    "start": "bun run src/index.ts",
-    "introspect": "drizzle-kit introspect:pg --config=drizzle.config.ts",
-    "generate": "drizzle-kit generate:pg --config=drizzle.config.ts",
-    "migrate": "bun run src/db/migrate.ts",
-    "studio": "drizzle-kit studio"
+    "dev:api": "tsx --watch src/api/index.ts",
+    "dev:client": "tsx src/client/index.ts",
+    "build": "tsc && tsc-alias",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:migrate": "cross-env DB_MIGRATING=true tsx src/db/migrate.ts",
+    "db:seed": "cross-env DB_SEEDING=true tsx src/db/seed.ts"
   },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
   "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "cross-env": "^7.0.3",
+    "drizzle-kit": "^0.21.2",
+    "tsc": "^2.0.4",
+    "tsc-alias": "^1.8.10",
+    "tsx": "^4.10.5",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
-    "hono": "^4.4.13",
-    "postgres": "^3.4.4"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.12",
+    "argon2": "^0.40.1",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
+    "drizzle-orm": "^0.30.10",
+    "drizzle-zod": "^0.5.1",
+    "express": "^4.19.2",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
+    "typed-rpc": "^5.0.2"
   }
 }
