--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,19 +9,14 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./dist",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
       "$/*": ["./*"]
     }
   },
-  "exclude": [
-    "node_modules",
-  ],
   "include": [
     "src/**/*.ts",
   ],
-  "tsc-alias": {
-    "resolveFullPaths": true,
-    "verbose": false
-  }
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
