--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,19 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"],
+      "$/*": ["./*"]
+    }
   },
+  "exclude": [
+    "node_modules",
+  ],
   "include": [
     "src/**/*.ts",
   ],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "tsc-alias": {
+    "resolveFullPaths": true,
+    "verbose": false
+  }
 }
