--- a/package.json
+++ b/package.json
@@ -1,39 +1,27 @@
 {
-  "name": "bytedash",
+  "name": "docker-typescript-pnpm",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev:api": "tsx --watch src/api/index.ts",
-    "dev:client": "tsx src/client/index.ts",
-    "build": "tsc && tsc-alias",
-    "db:generate": "drizzle-kit generate:pg",
-    "db:migrate": "cross-env DB_MIGRATING=true tsx src/db/migrate.ts",
-    "db:seed": "cross-env DB_SEEDING=true tsx src/db/seed.ts"
+    "dev": "nodemon",
+    "build": "time tswc",
+    "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.21.2",
-    "tsc": "^2.0.4",
-    "tsc-alias": "^1.8.10",
-    "tsx": "^4.10.5",
-    "typescript": "^5.4.5"
-  },
+  "packageManager": "pnpm@8.6.6",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.12",
-    "argon2": "^0.40.1",
-    "dotenv": "^16.4.5",
-    "dotenv-expand": "^11.0.6",
-    "drizzle-orm": "^0.30.10",
-    "drizzle-zod": "^0.5.1",
-    "express": "^4.19.2",
-    "pg": "^8.11.5",
-    "postgres": "^3.4.4",
-    "typed-rpc": "^5.0.2"
+    "cors": "^2.8.5",
+    "dotenv": "4.0.0",
+    "express": "^4.18.2",
+    "helmet": "^5.1.1"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.3.78",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.1",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "tswc": "^1.2.0",
+    "typescript": "^5.1.6"
   }
 }
