--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon",
-    "build": "time tswc",
+    "build": "tswc",
     "start": "node dist/index.js"
   },
   "packageManager": "pnpm@8.6.6",
