--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "docker-typescript-pnpm",
+  "name": "backend",
   "version": "1.0.0",
-  "private": true,
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
-    "build": "tswc",
-    "start": "node dist/index.js"
+    "start": "node dist/app.js",
+    "build": "tsc",
+    "dev": "ts-node src/app.ts"
   },
-  "packageManager": "pnpm@8.6.6",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "4.0.0",
-    "express": "^4.18.2",
-    "helmet": "^5.1.1"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@swc/core": "^1.3.78",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.5.1",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "tswc": "^1.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.10",
+    "express": "^4.19.2",
+    "ts-node": "^10.9.2"
   }
 }
