--- a/package.json
+++ b/package.json
@@ -6,18 +6,32 @@
   "scripts": {
     "start": "node dist/app.js",
     "build": "tsc",
-    "dev": "ts-node src/app.ts"
+    "dev": "ts-node src/app.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:seed": "cross-env DB_SEEDING=true ts-node src/db/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/pg": "^8.11.6",
+    "cross-env": "^7.0.3",
+    "drizzle-kit": "^0.21.2",
     "typescript": "^5.5.3"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
+    "drizzle-orm": "^0.30.10",
+    "drizzle-zod": "^0.5.1",
     "express": "^4.19.2",
-    "ts-node": "^10.9.2"
+    "pg": "^8.12.0",
+    "postgres": "^3.4.4",
+    "ts-node": "^10.9.2",
+    "typed-rpc": "^5.0.2",
+    "zod": "^3.23.8"
   }
 }
